--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
   display: flex;
-  
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -37,4 +40,34 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.section {
+  height: 100vh;
+  width: 100%;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: gold;
+  color:rgb(32, 36, 41);
+  font-weight: 900;
+  font-size: 18px;
+  width: 500px;
+  height: 250px;
+}
+
+.isVisible {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: cornflowerblue;
+  color: rgb(32, 36, 41);
+  font-size: 20px;
+  padding: 40px;
 }
